--- a/valentine.html
+++ b/valentine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Just One Question ❤️</title>
+  <title>Just One Question Aderonke ❤️</title>
   <style>
     * {
       margin: 0;
@@ -256,7 +256,7 @@
 <body>
   <div class="card" id="card">
     <div class="emoji">💝</div>
-    <h1>Hey there...</h1>
+    <h1>Hey there Fine Woman...</h1>
     <p>
       I could overthink this and make it complicated,<br>
       but I'd rather just be honest.
