--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
     <div class="emoji">💝</div>
     <h1>Hey there Fine Woman...</h1>
     <p>
-      I could overthink this and make it complicated,<br>
-      but I'd rather just be honest.
+      See fine girl no need to rush this,<br>
+      I just wanted to ask you properly.
     </p>
     <p class="question">Will you be my Valentine?</p>
     <div class="buttons">
